--- a/Notebooks/Hypothes Testing - Inferential Statistics.ipynb
+++ b/Notebooks/Hypothes Testing - Inferential Statistics.ipynb
@@ -34,21 +34,13 @@
    ],
    "source": [
     "# Statistical Analysis and Statistical Modeling\n",
-    "from scipy.stats import shapiro, levene, skew, kurtosis, ttest_ind\n",
     "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
     "from statsmodels.stats.anova import anova_lm\n",
     "from statsmodels.formula.api import ols\n",
     "import statsmodels.formula.api as smf\n",
     "import statsmodels.api as sm\n",
-    "import scipy.stats as stats\n",
-    "\n",
-    "# Data Manipulation and  Visualization\n",
-    "from itertools import combinations\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math\n",
     "import sys\n",
     "import re\n",
     "import os\n",
@@ -1793,6 +1785,7 @@
     }
    ],
    "source": [
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "analysis_path = os.path.join(project_root, 'Scripts')\n",
     "if analysis_path not in sys.path: sys.path.append(analysis_path)\n",
     "\n",
@@ -1919,12 +1912,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54f89156-0097-40f8-9c03-9b3e948c21de",
+   "cell_type": "markdown",
+   "id": "780feeb8-ab40-481f-b4c3-5989f4ba7d59",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "This analysis was performed by **Jabulente**, a passionate and dedicated data analyst with a strong commitment to using data to drive meaningful insights and solutions. For inquiries, collaborations, or further discussions, please feel free to reach out via.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "<div align=\"center\">  \n",
+    "    \n",
+    "[![GitHub](https://img.shields.io/badge/GitHub-Jabulente-black?logo=github)](https://github.com/Jabulente)  [![LinkedIn](https://img.shields.io/badge/LinkedIn-Jabulente-blue?logo=linkedin)](https://linkedin.com/in/jabulente-208019349)  [![Email](https://img.shields.io/badge/Email-jabulente@hotmail.com-red?logo=gmail)](mailto:Jabulente@hotmail.com)  \n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afaf0c0a-d2bf-4dc5-872a-5518d0ff7671",
+   "metadata": {},
+   "source": [
+    "<h1 style='font-size: 55px; color: red; font-family: Colonna MT; font-weight: 700; text-align: center'>THE END</h1>"
+   ]
   }
  ],
  "metadata": {
